--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,18 @@
-header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
+* {
+  box-sizing: border-box;
+  
 }
 
-.no-button {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  color: #1b89bc;
-  text-decoration: none;
-  font-size: 100%;
+body {
+  font-family: Happy Monkey;
+
 }
 
-.no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
+nav {
+  background-color: #FA8072;
+  opacity: 0.1;
 }
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
+.navbar-brand {
+  size: 10px;
 }
