--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,34 @@
 * {
   box-sizing: border-box;
-  
 }
 
 body {
   font-family: Happy Monkey;
-
+  background-color: #FFA384;
+ 
 }
 
-nav {
-  background-color: #FA8072;
-  opacity: 0.1;
+section {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar {
+  width: 100%;
+  height: 10%;
 }
 
 .navbar-brand {
-  size: 10px;
+  font-size: 40px;
+  font-weight: bolder;
+  color: #008AA5;
 }
+
+.nav-link {
+  background-color: #008AA5;
+}
+
+
