--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,41 +10,50 @@
       href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="public/css/jass.css\" />
+    <link rel="stylesheet" href="/css/jass.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">🥪 Sandwich Maker</a>
-      {{#if logged_in}}
-      <ul class="nav justify-content-end"></ul>
-        <h2> {{name}}</h2>
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
-        </li>
-      {{else}}
-        <ul class="nav nav-pills justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
-            </li>
-        </ul>
+    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">🥪 Sandwich Maker</a>
+        {{#if logged_in}}
+        <ul class="nav justify-content-end"></ul>
+          <h2> {{name}}</h2>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+        {{else}}
+          <ul class="nav nav-pills justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/signup">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+              </li>
+          </ul>
+      </div>
     </nav>
     {{/if}}
+
+     <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{body}}}
+     </main>
+
     <section class="greeting">
       {{#if logged_in}}
         <h2>Welcome, {{name}}! </h2>
         <button
-          class="no-button justify-content-center text-centered"
+          class="no-button justify-content-center text-centered mb-3"
           id="logout"
         >Logout</button>
       {{else}}
@@ -53,25 +62,20 @@
         <ul style="list-style: none;">
           <li><a
               href="/signup"
-              class="btn btn-primary btn-lg justify-content-end"
+              class="btn btn-primary btn-lg justify-content-end mb-3"
               role="button"
             >Sign Up</a></li>
           <li><a
               href="/login"
-              class="btn btn-outline-primary justify-content-end"
+              class="btn btn-outline-primary justify-content-end mb-3"
               role="button"
             >Login</a></li>
         </ul>
       {{/if}}
     </section>
 
-    <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      {{{body}}}
-    </main>
-
-    <footer>
-      <div class="container">
+    <footer >
+      <div class="container align-center-lg">
         <span class="text-muted">Group 4</span>
       </div>
     </footer>
