--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,7 +4,7 @@
         {{!-- {{each}} --}}
       <div class="card mb-5" style="width: 18rem;">
         <div class="card-header">
-          {{!-- <img src={{pokemon.image_url}} class="card-img-top" alt="{{}}"> --}}
+          {{!-- <img src={{}} class="card-img-top" alt="{{}}"> --}}
           <a class="card-title"">Title</a>
         </div>
         <div class="card-body">
