--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
         {{else}}
           <ul class="nav nav-pills justify-content-end">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/signup">Sign Up</a>
+                <a class="nav-link active" id="signup-btn" aria-current="page" href="/signup">Sign Up</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
@@ -62,7 +62,8 @@
         <ul style="list-style: none;">
           <li><a
               href="/signup"
-              class="btn btn-primary btn-lg justify-content-end mb-3"
+                id="signup-btn"
+              class="btn btn-lg justify-content-end mb-3"
               role="button"
             >Sign Up</a></li>
           <li><a
