login, signup and logout all work

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,8 +54,7 @@
         <h2>Welcome, {{name}}! </h2>
         <button
           class="no-button justify-content-center text-centered mb-3"
-          id="logout"
-        >Logout</button>
+          id="logout" href="/logout">Logout</button>
       {{else}}
         <h2>Welcome!</h2>
         <h4>Create an Account to Share Your Favorite Sandwich Recipe</h4>
