--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,38 +1,27 @@
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+<div class="slideshow">
+                <div class="slide">
+                    <img src="https://media.istockphoto.com/id/1300342890/photo/blt-sandwich-and-fries.jpg?b=1&s=170667a&w=0&k=20&c=kE7ymKcOT7PSWuy2ZRr7xI6Iww06oiwrxQiqms7VDZo=" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://media.istockphoto.com/id/1300342890/photo/blt-sandwich-and-fries.jpg?b=1&s=170667a&w=0&k=20&c=kE7ymKcOT7PSWuy2ZRr7xI6Iww06oiwrxQiqms7VDZo=" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://media.istockphoto.com/id/1300342890/photo/blt-sandwich-and-fries.jpg?b=1&s=170667a&w=0&k=20&c=kE7ymKcOT7PSWuy2ZRr7xI6Iww06oiwrxQiqms7VDZo=" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://media.istockphoto.com/id/1300342890/photo/blt-sandwich-and-fries.jpg?b=1&s=170667a&w=0&k=20&c=kE7ymKcOT7PSWuy2ZRr7xI6Iww06oiwrxQiqms7VDZo=" alt="" />
+                </div>
+            </div>
+        </div>
 </div>
+
+<script
+  type='text/javascript'
+  src='//code.jquery.com/jquery-1.11.0.min.js'
+></script>
+<script
+  type='text/javascript'
+  src='//code.jquery.com/jquery-migrate-1.2.1.min.js'
+></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script type='text/javascript' src='/js/carousel.js'></script>
