--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,14 +10,19 @@
       href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/jass.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="/css/jass.css" />
     <link rel="stylesheet" href="/css/style.css" />
+   
   </head>
 
   <body>
@@ -62,12 +67,12 @@
           <li><a
               href="/signup"
                 id="signup-btn"
-              class="btn btn-lg justify-content-end mb-3"
+              class="btn btn-lg justify-content-center mb-3"
               role="button"
             >Sign Up</a></li>
-          <li><a
+          <li><h4>If you already have an account, please login</h4><a
               href="/login"
-              class="btn btn-outline-primary justify-content-end mb-3"
+              class="btn btn-outline-primary justify-content-center mb-3"
               role="button"
             >Login</a></li>
         </ul>
@@ -75,7 +80,7 @@
     </section>
 
     <footer >
-      <div class="container align-center-lg">
+      <div class="container align-center>
         <span class="text-muted">Group 4</span>
       </div>
     </footer>
@@ -86,16 +91,15 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    {{!-- Using Slick files to implement the carousel --}}
+   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <!-- Render script for logged in users only -->
     {{#if logged_in}}<script></script>{{/if}}
 
     {{! jQuery files }}
-    <script
-      src="https://code.jquery.com/jquery-3.6.3.min.js"
-      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-      crossorigin="anonymous"
-    ></script>
+   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
   </body>
 
