added handlebars, routes info

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,7 @@
 
 body {
   font-family: Happy Monkey;
-  background-color: #FFA384;
- 
+  background-color: #ffa384;
 }
 
 section, footer {
@@ -24,21 +23,21 @@ section, footer {
 .navbar-brand {
   font-size: 40px;
   font-weight: bolder;
-  color: #008AA5;
+  color: #008aa5;
 }
 
 .nav-link {
-  background-color: #008AA5;
+  background-color: #008aa5;
 }
 
-h2, h4 {
+h2,
+h4 {
   color: whitesmoke;
-
 }
 
-#signup-btn  {
+#signup-btn {
   color: whitesmoke;
-  background-color:#008AA5;
+  background-color: #008aa5;
 }
 
 .slideshow {
