--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,6 +7,7 @@
           {{!-- <img src={{}} class="card-img-top" alt="{{}}"> --}}
           <a class='card-title'>Title</a>
         </div>
+        {{data}}
         <div class='card-body'>
           <ul class='list-group list-group-flush'>
             <li class='list-group-item'>Name: </li>
