--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,8 +22,6 @@
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="/css/jass.css" />
-    {{!--
-    <link rel="stylesheet" href="css/bootstrap-multiselect.css" type="text/css"> --}}
     <link rel="stylesheet" href="/css/style.css" />
    
   </head>
@@ -31,13 +30,15 @@
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">🥪 Sandwich Maker</a>
+        <a class="navbar-brand" href="/">🥪 Sandwich Maker</a>
         {{#if logged_in}}
         <ul class="nav justify-content-end"></ul>
           <h2> Welcome, {{name}}</h2>
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
-          </li>
+          <ul style="list-style: none;">
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li>
+          </ul>
         {{else}}
           <ul class="nav nav-pills justify-content-end">
               <li class="nav-item">
@@ -51,16 +52,20 @@
     </nav>
     {{/if}}
 
-     <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      {{{body}}}
-     </main>
 
+
+   
     <section class="greeting">
-      {{#if logged_in}}
-        <button
-          class="no-button justify-content-center text-centered mb-3"
-          id="create">Create a Sandwich</button>
+       {{#if logged_in}}
+        <div class="px-4 py-5 my-5 text-center">
+          <h1 class="display-5 fw-bold">Sandwich Dashboard</h1>
+          <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Share your sandwich recipe with others.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+              <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Create your Sandwich</button>
+            </div>
+          </div>
+        </div>
       {{else}}
         <h2>Welcome!</h2>
         <h4>Create an Account to Share Your Favorite Sandwich Recipe</h4>
@@ -77,14 +82,23 @@
               role="button"
             >Login</a></li>
         </ul>
-      {{/if}}
+         {{/if}}
     </section>
 
-    <footer>
-      <div class="footer">
-        <h4>Group 4</h4>
+    <main class="container container-fluid mt-5">
+      <div class="row justify-content-center">
+        <!-- Render the sub layout -->
+        {{{body}}}
       </div>
+    </main>
+   
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><i class="fa-brands fa-github"></i></a></li>
+        </ul>
+        <p class="text-center text-muted">Group 4</p>
     </footer>
+    
 
     {{! bootstrap files }}
     <script
@@ -92,8 +106,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    {{!-- Using Slick files to implement the carousel --}}
-   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
 
     <!-- Render script for logged in users only -->
     {{#if logged_in}}<script></script>{{/if}}
@@ -101,10 +114,6 @@
     {{! jQuery files }}
    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    {{!--
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js"
-      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/bootstrap-multiselect.js"></script> --}}
 
   </body>
 
