--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -9,11 +11,18 @@ body {
 
 section,
 .row {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
+  margin: 20px;
   align-items: center;
   justify-content: center;
+}
+
+
+
+#logged {
+  display: block;
+  position: relative;
+  top: 170;
+  background-color: wheat;
 }
 
 .navbar {
@@ -27,26 +36,25 @@ section,
   color: #008aa5;
 }
 
-.nav-link {
-  background-color: #008aa5;
-}
-
+h1,
 h2,
 h4 {
   color: #008aa5;
 }
 
 footer {
-  position: realtive;
-  left: 0;
+  position: fixed;
   bottom: 0;
+  left: 0;
+  right: 0;
+  height: 90px;
+  margin-top: 40px;
   width: 100%;
   background-color: whitesmoke;
   color: #008aa5;
-  text-align: center;
 }
 
-#signup-btn {
+.btn {
   color: whitesmoke;
   background-color: #008aa5;
 }
