--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,18 +1,27 @@
-<div class="container">
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-    <div class="col">
-      <div class="card shadow-sm">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-        <div class="card-body">
-          <p class="card-text"></p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-heart"></i></button>
-            </div>
+<div class='container'>
+  <div class='row'>
+    <div class='col-12 d-flex flex-wrap justify-content-around'>
+      {{!-- {{each}} --}}
+      <div class='card mb-5' style='width: 18rem;'>
+        <div class='card-header'>
+          {{!-- <img src={{}} class="card-img-top" alt="{{}}"> --}}
+          <a class='card-title'>Title</a>
+        </div>
+        {{data}}
+        <div class='card-body'>
+          <ul class='list-group list-group-flush'>
+            <li class='list-group-item'>Name: </li>
+            <li class='list-group-item'>Ingredients: </li>
+            <li class='list-group-item'>Rating:</li>
+          </ul>
+          <div class='d-grid gap-2 d-md-block'>
+            <button class='btn btn-primary' type='button'>Like</button>
+            <button class='btn btn-primary' type='button'>Review</button>
           </div>
         </div>
       </div>
+      {{!-- {{/each}} --}}
+
     </div>
   </div>
 </div>
- 
