--- a/views/sandwich.handlebars
+++ b/views/sandwich.handlebars
@@ -6,4 +6,5 @@ Choose five ingredients to make your own sandwich with!
       <option>{{ingredient.name}}</option>
     {{/each}}
   </select>
+<button type="button" (click)="onChangeType()" class="btn btn-secondary">Submit</button>
 {{/each}}
