--- a/views/sandwich.handlebars
+++ b/views/sandwich.handlebars
@@ -1,10 +1,11 @@
-
-Choose five ingredients to make your own sandwich with!
-{{#each categories as |category|}}
+<div class='container'>
+  <h4> Choose five ingredients to make your own sandwich with!</h4>
+  {{#each categories as |category|}}
   <select>
     {{#each category.ingredients as |ingredient|}}
-      <option>{{ingredient.name}}</option>
+    <option>{{ingredient.name}}</option>
     {{/each}}
   </select>
-<button type="button" (click)="onChangeType()" class="btn btn-secondary">Submit</button>
-{{/each}}
+  {{/each}}
+  <button type='button' '(click)=“onChangeType()' class='btn btn-secondary'>Submit</button>
+  </div>
