--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
 <div class="slideshow">
     <div class="slide">
-        <img src="https://media.istockphoto.com/id/1300342890/photo/blt-sandwich-and-fries.jpg?b=1&s=170667a&w=0&k=20&c=kE7ymKcOT7PSWuy2ZRr7xI6Iww06oiwrxQiqms7VDZo=" alt="" />
+        <img src="https://images.unsplash.com/photo-1553909489-cd47e0907980?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8c2FuZHdpY2h8ZW58MHx8MHx8&w=1000&q=80" alt="" />
     </div>
     <div class="slide">
-        <img src="https://media.istockphoto.com/id/1300342890/photo/blt-sandwich-and-fries.jpg?b=1&s=170667a&w=0&k=20&c=kE7ymKcOT7PSWuy2ZRr7xI6Iww06oiwrxQiqms7VDZo=" alt="" />
+        <img src="https://media.istockphoto.com/id/1397193477/photo/club-sandwich-made-with-bacon-ham-turkey-cheese-lettuce-and-tomato.jpg?b=1&s=170667a&w=0&k=20&c=Sz2aFQ_oQeho9s435e37D88Svv0uHwewqB9ZVaDiUg4=" alt="" />
     </div>
     <div class="slide">
-        <img src="https://media.istockphoto.com/id/1300342890/photo/blt-sandwich-and-fries.jpg?b=1&s=170667a&w=0&k=20&c=kE7ymKcOT7PSWuy2ZRr7xI6Iww06oiwrxQiqms7VDZo=" alt="" />
+        <img src="https://media.istockphoto.com/id/1305692648/photo/classic-grilled-cuban-sandwich.jpg?b=1&s=170667a&w=0&k=20&c=bGZI1ZyqKsj1Z6H3_ifRBL2I8zAq-6ch89d_NOzoFZA=" alt="" />
     </div>
     <div class="slide">
         <img src="https://media.istockphoto.com/id/1300342890/photo/blt-sandwich-and-fries.jpg?b=1&s=170667a&w=0&k=20&c=kE7ymKcOT7PSWuy2ZRr7xI6Iww06oiwrxQiqms7VDZo=" alt="" />
