--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <div class='container'>
-  <div class='row'>
+  <div class='row mt-4'>
     <div class='col-12 d-flex flex-wrap justify-content-around'>
       {{#each data as |sandwich|}}
 
