--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap"
       rel="stylesheet"
     />
+    <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -17,7 +18,6 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
@@ -27,20 +27,15 @@
   </head>
 
   <body>
-     {{>header}} 
-
- 
-
-    <main class="container container-fluid">
-      <div class="row justify-content-center">
+    {{>header}} 
         <!-- Render the sub layout -->
-        {{{body}}}
-      </div>
-    </main>
+    <div class="container container-fluid mt-5">
+      {{{body}}}
+    </div>
 
-      {{>section}}
+    {{>section}}
 
-     {{>footer}}
+    {{>footer}}
     
 
     {{! bootstrap files }}
@@ -58,6 +53,7 @@
    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
+  
   </body>
 
 </html>
