--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,8 +21,31 @@
               <li class='list-group-item'>Rating:</li>
             </ul>
             <div class='d-grid gap-2 d-md-block'>
-              <button class='btn btn-primary' type='button'>Like</button>
-              <button class='btn btn-primary' type='button'>Review</button>
+              <button id='btn-like' class='btn btn-primary' type='button'><i class="fa-solid fa-heart"></i> <span class="ui basic blue label">0</span></button>
+              <button class='btn btn-primary' type='button' data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-regular fa-comment"></i></button>
+
+
+              <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Comment</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="input-group">
+                      <textarea class="form-control" aria-label="With textarea"></textarea>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             </div>
           </div>
         </div>
@@ -31,3 +54,13 @@
     </div>
   </div>
 </div>
+
+<script
+  type='text/javascript'
+  src='//code.jquery.com/jquery-1.11.0.min.js'
+></script>
+<script
+  type='text/javascript'
+  src='//code.jquery.com/jquery-migrate-1.2.1.min.js'
+></script>
+<script type="text/javascript" src="/js/like.js"></script>
