--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,7 +21,7 @@
               <li class='list-group-item'>Rating:</li>
             </ul>
             <div class='d-grid gap-2 d-md-block'>
-              <button id='btn-like' class='btn btn-primary' type='button'><i class="fa-solid fa-heart"></i> <span class="ui basic blue label">0</span></button>
+              <button class='btn btn-primary btn-like' type='button'><i class="fa-solid fa-heart"></i> <span class="ui basic blue label">0</span></button>
               <button class='btn btn-primary' type='button' data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-regular fa-comment"></i></button>
 
 
