--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,7 +57,7 @@
     {{! jQuery files }}
    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
+<script type="text/javascript" src="/js/sandwich.js"></script>
   </body>
 
 </html>
