--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
-* {
+/* * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+} */
 
 body {
   font-family: Happy Monkey;
@@ -50,6 +50,19 @@ footer {
   justify-content: center;
   max-width: 60%;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.3);
+}
+
+.row {
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+}
+
+.dashboard {
+  width: 100%;
+
 }
 
 .slide img {
