--- a/views/partials/section.handlebars
+++ b/views/partials/section.handlebars
@@ -1,8 +1,6 @@
 <section class="py-5 text-center container">
     {{#if logged_in}}
-      
-    <p class="lead mb-4">Share your sandwich recipe with others.</p>
-
+    <h4>Share your sandwich recipe with others.</h4>
     {{else}}
     <h2>Welcome!</h2>
     <h4>Create an Account to Share Your Favorite Sandwich Recipe</h4>
