--- a/views/sandwich.handlebars
+++ b/views/sandwich.handlebars
@@ -1,5 +1,5 @@
-<div class="row">
-    <h4> Choose five ingredients to make your own sandwich with!</h4>
+<div class="row" id="sandwich">
+    <h2 class="px-4 pt-5 my-5 text-center"> Choose five ingredients to make your own sandwich with!</h2>
     {{#each categories as |category|}}
       <select>
         {{#each category.ingredients as |ingredient|}}
