--- a/views/sandwich.handlebars
+++ b/views/sandwich.handlebars
@@ -1,11 +1,17 @@
-<div class="row" id="sandwich">
-    <h2 class="px-4 pt-5 my-5 text-center"> Choose five ingredients to make your own sandwich with!</h2>
-    {{#each categories as |category|}}
-      <select>
-        {{#each category.ingredients as |ingredient|}}
-          <option>{{ingredient.name}}</option>
-        {{/each}}
-      </select>
-    {{/each}}
-    <button type="button" (click)="onChangeType()" class="btn btn-secondary">Submit</button>
+<div class='row' id='sandwich'>
+  <h2 class='px-4 pt-5 my-5 text-center'>
+    Choose five ingredients to make your own sandwich with!</h2>
+  {{#each categories as |category|}}
+    <select>
+      {{#each category.ingredients as |ingredient|}}
+        <option>{{ingredient.name}}</option>
+      {{/each}}
+    </select>
+  {{/each}}
+  <button
+    type='button'
+    id='submit'
+    (click)='onChangeType()'
+    class='btn btn-secondary'
+  >Submit</button>
 </div>
