--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -32,15 +32,15 @@
               <li class='list-group-item'>Ingredients:
                 {{ingredient.name}}</li>
             {{/each}}
-            <li class='list-group-item'>Rating:</li>
+            <li class='list-group-item'>Rating: </li>
           </ul>
           <div class='d-grid gap-2 d-md-block'>
-            <button class='btn btn-primary btn-like' type='button'><i
+            <button class='btn btn-primary btn-like btn-dashboard' type='button'><i
                 class='fa-solid fa-heart'
               ></i>
               <span class='ui basic blue label'>0</span></button>
             <button
-              class='btn btn-primary'
+              class='btn btn-primary btn-dashboard'
               type='button'
               data-bs-toggle='modal'
               data-bs-target='#exampleModal'
