--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -45,6 +45,8 @@
               data-bs-toggle='modal'
               data-bs-target='#exampleModal'
             ><i class='fa-regular fa-comment'></i></button>
+            <button class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top"
+              title="Delete"><i class="fa fa-trash"></i></button>
 
             <!-- Modal -->
             <div
