--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -4,7 +4,7 @@
     {{#if logged_in}}
     <ul class="nav justify-content-start" style="list-style: none;"></ul>
         <ul style="list-style: none;">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/logout"><i class="fa-solid fa-right-from-bracket"></i>Logout</a>
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
         </li>
     </ul>
     {{else}}
@@ -13,7 +13,7 @@
             <a class="nav-link active" id="signup-btn" aria-current="page" href="/signup">Sign Up</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" id="login-btn" href="/login">Login</a>
             </li>
         </ul>
     </div>
