--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -103,6 +103,7 @@
                       id='myBtn'
                       type='button'
                       class='btn btn-primary btn-submit'
+                      data-id='{{review.id}}'`
                     >Submit</button>
                   </div>
                   {{!-- /comment box --}}
@@ -128,5 +129,5 @@
   src='//code.jquery.com/jquery-migrate-1.2.1.min.js'
 ></script>
 <script type='text/javascript' src='/js/like.js'></script>
-<script type='text/javascript' src='/js/comment.js'></script>
+<script type='text/javascript' src='/js/review.js'></script>
 
