--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class='dashboard'>
+<div id='message' class='dashboard'>
   <div class='px-4 pt-5 my-5 text-center border-bottom'>
     <h2 class='display-4 fw-bold'>Sandwich Dashboard</h2>
     <div class='d-grid gap-2 d-sm-flex justify-content-sm-center mb-5'>
@@ -19,49 +19,53 @@
 
       <div class='card flex-wrap mx-auto' style='width: 18rem;'>
 
-         <div class='d-grid gap-2 d-md-flex justify-content-md-end mt-2'>
-           
-            <button
+        <div class='d-grid gap-2 d-md-flex justify-content-md-end mt-2'>
+
+          <button
+            class='btn btn-danger btn-sm rounded-0 sandwich-list'
+            type='button'
+            data-toggle='tooltip'
+            data-placement='top'
+            title='Delete'
+            data-id='{{sandwich.id}}'
+          ><i
+              class='fa fa-trash'
               class='btn btn-danger btn-sm rounded-0 sandwich-list'
               type='button'
               data-toggle='tooltip'
               data-placement='top'
               title='Delete'
               data-id='{{sandwich.id}}'
-            ><i class='fa fa-trash' class='btn btn-danger btn-sm rounded-0 sandwich-list'
-              type='button'
-              data-toggle='tooltip'
-              data-placement='top'
-              title='Delete'
-              data-id='{{sandwich.id}}'></i></button>
+            ></i></button>
         </div>
 
         <div class='card-body'>
           <div class='px-1 pt-1 my-2 text-center border-bottom'>
-            <li class='list-group-item'><h4>{{sandwich.name}}</h4>
+            <li class='list-group-item'><h2>{{sandwich.name}}</h2>
             </li>
           </div>
-          
-          <ul class='list-group list-group-flush'>
 
+          <ol class='list-group list-group-numbered'>
+            <h4> Ingredients:</h4>
             {{#each sandwich.ingredients as |ingredient|}}
-              <li class='list-group-item'>Ingredients:
-                {{ingredient.name}}</li>
+              <li class='list-group-item'>{{ingredient.name}}</li>
             {{/each}}
-
-          </ul>
+          </ol>
           <div class='d-grid gap-1 d-md-flex mt-4'>
             <button
               class='btn btn-primary btn-like btn-dashboard'
-              type='button' data-id='{{sandwich.id}}'`
-            ><i class='fa-regular fa-heart' ></i>
+              type='button'
+              data-id='{{sandwich.id}}'
+              `
+            ><i class='fa-regular fa-heart'></i>
               <span class='like-label'>0</span></button>
             <button
               class='btn btn-primary btn-comment btn-dashboard'
               type='button'
               data-bs-toggle='modal'
               data-bs-target='#exampleModal'
-            ><i class='fa-regular fa-comment'></i> <span class='comment-label'>0</span></button>
+            ><i class='fa-regular fa-comment'></i>
+              <span class='comment-label'>0</span></button>
 
             <!-- Modal -->
             <div
@@ -87,7 +91,8 @@
                   </div>
                   <div class='modal-body'>
                     <div class='input-group'>
-                      <textarea id="user-comment"
+                      <textarea
+                        id='user-comment'
                         class='form-control'
                         aria-label='With textarea'
                       ></textarea>
@@ -103,12 +108,13 @@
                       id='myBtn'
                       type='button'
                       class='btn btn-primary btn-submit'
-                      data-id='{{review.id}}'`
+                      data-id='{{review.id}}'
+                      `
                     >Submit</button>
                   </div>
-                  {{!-- /comment box --}}
-                  <div class="media-body"></div>
-                  {{!-- end /comment box --}}
+                  {{! /comment box }}
+                  <div class='media-body mx-4'></div>
+                  {{! end /comment box }}
                 </div>
               </div>
             </div>
@@ -130,4 +136,3 @@
 ></script>
 <script type='text/javascript' src='/js/like.js'></script>
 <script type='text/javascript' src='/js/review.js'></script>
-
